# demo

./: .gitignore  .gitmodules  README.md
c++/cmake/variable_scope/: CMakeLists.txt
c++/cmake/variable_scope/include_vs_subdir/: CMakeLists.txt
c++/ohos/lib/cjson/: CMakeLists.txt  codemap.md
c++/ohos/lib/eventhandler/: CMakeLists.txt  codemap.md
c++/ohos/lib/hilog/: CMakeLists.txt  codemap.md  readme.md
c++/ohos/lib/hitrace/: CMakeLists.txt  codemap.md  readme.md
c++/ohos/lib/init_utils/: CMakeLists.txt  codemap.md
c++/ohos/lib/ipc/: CMakeLists.txt  codemap.md
c++/ohos/lib/libsec/: CMakeLists.txt  codemap.md
c++/ohos/lib/refbase/: CMakeLists.txt  codemap.md
c++/ohos/lib/samgr_mini/: CMakeLists.txt  iservice_registry.h  isystem_ability_manager.h  samgr_mini.cpp  samgr_mini.h  samgr_proxy.cpp  samgr_proxy.h
c++/ohos/lib/syspara/: CMakeLists.txt  codemap.md
c++/ohos/src/demo_client/: CMakeLists.txt  main.cpp
c++/ohos/src/demo_service_server/: CMakeLists.txt  main.cpp
c++/ohos/src/timer_node_demo_v2/: CMakeLists.txt  codemap.md  main.cpp  misc.h  node_device.cpp  node_device.h  node_devices.h  node_handle.cpp  node_handle.h  node_handles.cpp  node_handles.h  node_manager.cpp  node_manager.h
c++/unix/io/ioctl/: .gitignore  CMakeLists.txt  build.sh  ioctl.c  ioctl.cpp  read_mod_write.cpp
crypto/dukpt/dukpt-cli/: README.md  dukpt.py  main.py  pyproject.toml  utils.py
crypto/dukpt/dukpt-cli/test/: data.json  data_ik_aes128.json  extract-bptool.py  raw_data.txt  raw_data_ik_aes128.txt
crypto/libmbedtls/print_der/: CMakeLists.txt  Makefile  main.c
crypto/libmbedtls/print_der/test/: cert.der
crypto/libopenssl/print_cert/: CMakeLists.txt  Makefile  main.c
crypto/mac/mac-cli/: README.md  pyproject.toml
crypto/mac/mac-cli/mac_cli/: __init__.py  key_derivation.py  mac.py  main.py  padding.py
crypto/mac/mac-cli/tests/: test_mac.py
embedded/mps2an385-cmake/: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  gdbinit  toolchain-arm-newlib.cmake  toolchain-arm.cmake
embedded/mps2an385-cmake/lib/CMSDK_CM3/: CMakeLists.txt
embedded/mps2an385-cmake/lib/CMSDK_CM3_EXT/: CMakeLists.txt
embedded/mps2an385-cmake/lib/CMSIS/: CMakeLists.txt
embedded/mps2an385-cmake/lib/FreeRTOS-Hook/: CMakeLists.txt  hook.c
embedded/mps2an385-cmake/lib/FreeRTOS-Kernel/: .ignore  CMakeLists.txt
embedded/mps2an385-cmake/lib/FreeRTOS-Kernel-Config/: CMakeLists.txt
embedded/mps2an385-cmake/lib/LVGL/: CMakeLists.txt  lv_conf.h
embedded/mps2an385-cmake/lib/TraceRecorder/: CMakeLists.txt
embedded/mps2an385-cmake/lib/misc/: CMakeLists.txt
embedded/mps2an385-cmake/lib/newlib/: CMakeLists.txt
embedded/mps2an385-cmake/src/asm_push_pop_direction/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/calling_convention/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/delay_nop/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/delay_us/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_blinky/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_blinky_traced/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_coroutine/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_counter/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_display_blinky/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_display_mathart/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_event_group/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_golang_channel/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_lv_example_gestures/: CMakeLists.txt  lv_example_gestures.c  main.c
embedded/mps2an385-cmake/src/freertos_lvgl_animation/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_lvgl_button/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_lvgl_dragme/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_lvgl_helloworld/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_mpu_offical_demo/: CMakeLists.txt  init.c  main.c  mpu_demo.c
embedded/mps2an385-cmake/src/freertos_mutex_inside_resource/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_overflow/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_rpc/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_rpc_v2/: AGENTS.md  CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_runtimestat/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_send_recv_queue/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_service_task/: main.c
embedded/mps2an385-cmake/src/freertos_service_task_error_example/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_service_task_negative_example/: CMakeLists.txt
embedded/mps2an385-cmake/src/freertos_stackgrow_mallocgrow/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_tasklet/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_tasks_c_additions_demo/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_timer/: CMakeLists.txt
embedded/mps2an385-cmake/src/freertos_timer_as_signal/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_timer_cmdqueue_full_lock/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_touch_gesture/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_touch_gesture_v2/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_touch_gesture_v3/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/freertos_touch_helloworld/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/hardfault_handler/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/hello_world/: CMakeLists.txt
embedded/mps2an385-cmake/src/hello_world_fstackprotector/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/hello_world_i2c_send/: main.c
embedded/mps2an385-cmake/src/hello_world_ssd0303/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/hello_world_systick/: CMakeLists.txt  main.c
embedded/mps2an385-cmake/src/hello_world_touchirq/: CMakeLists.txt  (+1 more)
(+634 files in other folders)
