[project]
name = "dukpt-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycryptodome>=3.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[project.scripts]
dukpt-cli = "main:main"

[tool.setuptools]
py-modules = ["main"]
